--- a/src/app/components/dialog/menu/open-sheet-dialog/open-sheet-dialog.component.scss
+++ b/src/app/components/dialog/menu/open-sheet-dialog/open-sheet-dialog.component.scss
@@ -1,33 +1,10 @@
 md-dialog-content {
-  md-card {
-    gurpsy-file-input {
-      padding-left: 10px;
-      margin-top: 10px;
-    }
+  gurpsy-file-input {
+    padding-left: 10px;
+    margin-top: 10px;
   }
 
-  button {
-    width: 100%;
-    padding: 6px 0px 0px 0px;
-
-    .avatar {
-      img {
-        height: 40px;
-        width: 40px;
-      }
-    }
-
-    .sheetRow {
-      height: 40px;
-    }
-
-    .sheetInfo {
-
-      padding-left: 8px;
-
-      .sheetPoints {
-        font-size: small;
-      }
-    }
+  .message {
+    font-size: x-small;
   }
 }
