--- a/src/app/components/dialog/menu/open-sheet-dialog/open-sheet-dialog.component.scss
+++ b/src/app/components/dialog/menu/open-sheet-dialog/open-sheet-dialog.component.scss
@@ -4,7 +4,12 @@ md-dialog-content {
     margin-top: 10px;
   }
 
-  .message {
-    font-size: x-small;
+  .messageWrapper {
+    padding-top: 8px;
+
+    .message {
+      font-size: x-small;
+    }
   }
+
 }
