--- a/src/app/components/dialog/template-updaters/identity-updater/identity-updater.component.html
+++ b/src/app/components/dialog/template-updaters/identity-updater/identity-updater.component.html
@@ -1,7 +1,6 @@
 <md-dialog-content *ngIf="template"
-                   class="flex-container"
-                   fxLayout="column"
-                   fxLayoutAlign="space-between stretch">
+                   class="identityUpdater flex-container"
+                   fxLayout="column">
   <md-input-container class="flex-item">
     <input mdInput placeholder="{{'SHEET.IDENTITY.NAME'| translate}}" [(ngModel)]="template.name" required>
     <md-error>{{'MESSAGE.ERROR.REQUIRED_NAME'| translate}}</md-error>
