--- a/src/app/components/dialog/template-updaters/new-sheet/new-sheet.component.html
+++ b/src/app/components/dialog/template-updaters/new-sheet/new-sheet.component.html
@@ -3,9 +3,8 @@
 </h1>
 
 <md-dialog-content *ngIf="template"
-                   class="flex-container"
-                   fxLayout="column"
-                   fxLayoutAlign="space-between stretch">
+                   class="newSheet flex-container"
+                   fxLayout="column">
   <md-input-container class="flex-item">
     <input mdInput placeholder="{{'SHEET.IDENTITY.NAME'| translate}}" [(ngModel)]="template.name" required>
     <md-error>{{'MESSAGE.ERROR.REQUIRED_NAME'| translate}}</md-error>
