[enhancement] Added Character name to the header

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -15,7 +15,8 @@
 
     <span class="flex-item"
           fxFlex>
-      {{'APPLICATION'| translate}}
+      <span *ngIf="!sheet">{{'APPLICATION'| translate}}</span>
+      <span *ngIf="sheet">{{sheet.metaData.identity.name}}</span>
     </span>
 
     <button md-icon-button
