[enhancement] Rewired the sheet/template updating observables and observers

--- a/src/app/components/select-sheet/select-sheet.component.html
+++ b/src/app/components/select-sheet/select-sheet.component.html
@@ -33,7 +33,7 @@
     </md-card-content>
   </md-card>
 
-  <md-card *ngIf="templates.length > 0">
+  <md-card *ngIf="templates && templates.length > 0">
     <gurpsy-select-sheet-button
       *ngFor="let template of templates"
       [template]="template"
