[enhancement] Work in progress on integrating Whitestorm.js. No waiting for 2.1.9

--- a/src/app/components/dialog/menu/dice-dialog/dice-dialog.component.html
+++ b/src/app/components/dialog/menu/dice-dialog/dice-dialog.component.html
@@ -1,7 +1,5 @@
 <md-dialog-content>
-  <div class="diceView">
-    <canvas #canvas>
-    </canvas>
+  <div class="diceView" #canvas>
   </div>
 </md-dialog-content>
 
